[package]
name = "seax_scheme"
version = "0.3.0"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "Scheme compiler for the Seax VM."
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax_scheme"
readme = "README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
combine = "1.0.0"
combine-language = "0.5.0"
log = "0.3.1"

[dependencies.seax_util]
git = "https://github.com/hawkw/seax_util.git"

[dependencies.ast_base]
path = "ast_base"
