[package]
name = "parser"
version = "0.3.0"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
description = "Parser for the Seax Scheme compiler"
license = "MIT"
homepage = "http://hawkweisman.me/seax"
repository = "https://github.com/hawkw/seax_scheme"
readme = "../README.md"
keywords = ["vm","lisp","languages"]

[dependencies]
parser-combinators = "~0.2.6"

[dependencies.ast]
path = "../ast"
